sumo/tests/jtrrouter/errors/sinks/false_edge__straight_only_sinks/options.jtrrouter
--net-file=input_net.net.xml --flows=input_flows.flows.xml --output-file=routes.rou.xml --turn-defaults=0,100,0,0 --sinks=xxx --ignore-errors

